Новая миграуция из дириктории
