# app/Models/ExpectedRevenue.php
@@ -4,7 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
-use Illuminate\Database\Eloquent\SoftDeletes;
+
 
 class ExpectedRevenue extends Model
 {
@@ -18,6 +18,8 @@ class ExpectedRevenue extends Model
 
     protected $fillable=[
         "company_name",
+        "company_id",
+        "year",
         "mount",
         "sum",
     ];
