# storage/api-docs/api-docs.json
@@ -45,6 +45,16 @@
                                         "description": "0",
                                         "type": "number",
                                         "example": "0"
+                                    },
+                                    "company_id": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "17"
+                                    },
+                                    "year": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "2022"
                                     }
                                 },
                                 "type": "object"
@@ -66,12 +76,22 @@
                                         "date_budget": {
                                             "description": "0",
                                             "type": "date",
-                                            "example": "0"
+                                            "example": "2022-01-01"
                                         },
                                         "sum": {
                                             "description": "0",
                                             "type": "number",
                                             "example": "0"
+                                        },
+                                        "company_id": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "17"
+                                        },
+                                        "year": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "2022"
                                         }
                                     },
                                     "type": "object"
@@ -215,7 +235,7 @@
                                 ],
                                 "properties": {
                                     "date_budget": {
-                                        "description": "2022-01-01",
+                                        "description": "0",
                                         "type": "date",
                                         "example": "2022-01-01"
                                     },
@@ -223,6 +243,16 @@
                                         "description": "0",
                                         "type": "number",
                                         "example": "0"
+                                    },
+                                    "company_id": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "17"
+                                    },
+                                    "year": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "2022"
                                     }
                                 },
                                 "type": "object"
@@ -244,12 +274,22 @@
                                         "date_budget": {
                                             "description": "0",
                                             "type": "date",
-                                            "example": "0"
+                                            "example": "2022-01-01"
                                         },
                                         "sum": {
                                             "description": "0",
                                             "type": "number",
                                             "example": "0"
+                                        },
+                                        "company_id": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "17"
+                                        },
+                                        "year": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "2022"
                                         }
                                     },
                                     "type": "object"
@@ -1109,6 +1149,16 @@
                                         "description": "0",
                                         "type": "number",
                                         "example": "0"
+                                    },
+                                    "company_id": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "17"
+                                    },
+                                    "year": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "2022"
                                     }
                                 },
                                 "type": "object"
@@ -1133,7 +1183,7 @@
                                             "example": ""
                                         },
                                         "mount": {
-                                            "description": "Август",
+                                            "description": "0",
                                             "type": "text",
                                             "example": "Август"
                                         },
@@ -1141,6 +1191,16 @@
                                             "description": "0",
                                             "type": "number",
                                             "example": "0"
+                                        },
+                                        "company_id": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "17"
+                                        },
+                                        "year": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "2022"
                                         }
                                     },
                                     "type": "object"
@@ -1330,10 +1390,10 @@
                                     "company_name": {
                                         "description": "Название компании",
                                         "type": "text",
-                                        "example": "Тест"
+                                        "example": ""
                                     },
                                     "mount": {
-                                        "description": "Август",
+                                        "description": "0",
                                         "type": "text",
                                         "example": "Август"
                                     },
@@ -1341,6 +1401,16 @@
                                         "description": "0",
                                         "type": "number",
                                         "example": "0"
+                                    },
+                                    "company_id": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "17"
+                                    },
+                                    "year": {
+                                        "description": "0",
+                                        "type": "number",
+                                        "example": "2022"
                                     }
                                 },
                                 "type": "object"
@@ -1365,7 +1435,7 @@
                                             "example": ""
                                         },
                                         "mount": {
-                                            "description": "Август",
+                                            "description": "0",
                                             "type": "text",
                                             "example": "Август"
                                         },
@@ -1373,6 +1443,16 @@
                                             "description": "0",
                                             "type": "number",
                                             "example": "0"
+                                        },
+                                        "company_id": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "17"
+                                        },
+                                        "year": {
+                                            "description": "0",
+                                            "type": "number",
+                                            "example": "2022"
                                         }
                                     },
                                     "type": "object"
